# OpenReef

./: .env.example  .gitignore  AGENTS.md  OGPU_SDK_INTEGRATION_ROADMAP.md  README.md  Revision proyecto.md  docker-compose.prod.yml  docker-compose.yml  openreef_doc(es).md  openreef_mvp_doc(en).md  openreef_mvp_doc(es).md  pyproject.toml
.github/workflows/: docker-images.yml  test-actions.yml  test.yml
backend/: Dockerfile.prod  alembic.ini  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_seed_models.py  003_ogpu_task_address.py  004_cleanup.py  005_job_indexes.py  006_processed_events.py  007_provider_reliability.py  008_provider_hardware.py  009_dataset_tokens.py  010_provider_penalty.py  012_unique_active_job_per_user.py  013_job_metrics.py  6f13b3d5fb42_add_index_users_is_verified.py
backend/app/: config.py  database.py  dependencies.py  limiter.py  main.py
backend/app/api/: auth.py  datasets.py  health.py  jobs.py  models.py  payments.py  providers.py
backend/tests/: conftest.py
docs/: provider-onboarding.md
frontend/: Dockerfile.prod  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
nginx/: nginx.conf
ogpu-source/: Dockerfile  docker-compose-nvidia.yml  worker.py
scripts/: deploy.sh  infra.sh  migrate.sh  setup.sh  start-all.sh  start-backend.sh  start-frontend.sh  start-worker.sh  stop-all.sh  test.sh
sources/: README.md
sources/finetune/: Dockerfile  Dockerfile.rocm  docker-compose-amd.yml  docker-compose-nvidia.yml  worker.py
(+63 files in other folders)
